# file-transfer

./: .gitignore  README.md  docker-compose.yaml  pyrightconfig.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: clean.py  clear.py  config.py  logger.py  main.py  s3.py
backend/app/api/v1/: __init__.py  files.py
backend/app/aws/: logs.py  s3.py  session.py
backend/app/dependencies/: database.py
backend/app/exceptions/: files.py
backend/app/models/: __init__.py  base.py  files.py
backend/app/repositories/: files.py  folder.py
backend/app/schemes/: files.py
backend/app/services/: base.py  files.py  folder.py
backend/configuration/: .env.dev  .env.test
backend/migrations/: env.py
backend/migrations/versions/: 06ad16e95d46_init.py  39291c1eefb4_init.py  4f39777b525d_folder.py  b192a8afcb20_.py  dea1ac229356_folder.py
backend/tests/: conftest.py  test_clean.py  test_clear.py
backend/tests/api/: test_download_file.py  test_download_folder.py  test_get_file.py  test_get_folder.py  test_upload_files.py
configuration/: .env.backend
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend-old/: .dockerignore  .gitignore  Dockerfile  package-lock.json  tsconfig.app.json  vite.config.ts
frontend-old/server/: app.py  pyproject.toml
frontend-old/src/: main.tsx
frontend/app/: config.ts  layout.tsx  page.tsx
frontend/src/: App.jsx  index.css
quick-start/: .env.localstack  docker-compose.yaml
(+22 files in other folders)
