[tool.poetry]
name = "file-transfer-backend"
version = "0.1.0"
description = ""
authors = ["batir <batir.vik@gmail.com>"]
readme = "README.md"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
psycopg = "^3.2.1"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
alembic = "^1.13.2"
aioboto3 = "^13.1.1"
types-aioboto3 = {extras = ["essential"], version = "^13.1.1"}
greenlet = "^3.1.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pyright = "^1.1.379"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
